<resources>
    <string name="app_name">CHIPTool</string>
    <string name="barcode_scanner_activity_toolbar_title">QR Scan</string>
    <string name="chip_device_info_title">CHIP Device Info:</string>
    <string name="chip_device_info_subtitle">Please manually connect to this device\'s soft AP using the information below.</string>
    <string name="chip_device_info_version_label">Version:</string>
    <string name="chip_device_info_vendor_id_label">Vendor ID:</string>
    <string name="chip_device_info_product_id_label">Product ID:</string>
    <string name="chip_device_info_setup_code_label">Setup PIN Code:</string>
    <string name="chip_device_info_optional_vendor_tags_label">Optional Vendor tags:</string>
    <string name="camera_permission_missing_alert_title">Camera permission missing</string>
    <string name="camera_permission_missing_alert_subtitle">Camera permission required to be able to scan the QR code.</string>
    <string name="camera_permission_missing_alert_try_again">Try again</string>
    <string name="camera_unavailable_alert_title">Camera unavailable</string>
    <string name="camera_unavailable_alert_subtitle">Error launching camera to scan the QR code.</string>
    <string name="camera_unavailable_alert_exit">Exit</string>

    <string name="send_echo_btn_text">Send echo</string>
    <string name="echo_status_connecting">Connecting…</string>
    <string name="echo_status_sending_message">Sending message…</string>
    <string name="echo_status_response">Received echo response:\n\n%1$s</string>
    <string name="scan_qr_code_btn_text">Scan QR Code</string>
    <string name="echo_client_btn_text">Echo Client</string>
    <string name="on_off_btn_text">Light On/Off Cluster</string>
    <string name="enter_ip_address_hint_text">Enter IP Address (eg. 192.168.10.2)</string>
    <string name="echo_input_hint_text">Enter message for device</string>

    <string name="send_command_on_btn_text">On</string>
    <string name="send_command_off_btn_text">Off</string>
    <string name="send_command_toggle_btn_text">Toggle</string>

    <string name="commissioner_commissioning">Commissioning</string>
    <string name="commissioner_name">Commissioner</string>
    <string name="commissioner_select_ble_device">Select BLE Device</string>
    <string name="commissioner_scan_device">Scan Device</string>
    <string name="commissioner_cancel">Cancel</string>
    <string name="commissioner_done">Done</string>
    <string name="commissioner_scan_instruction">Please scan the QR code on the device</string>
    <string name="commissioner_your_device">Your Device</string>
    <string name="commissioner_select_network">Select Network</string>
    <string name="commissioner_add_device">Add Device</string>
    <string name="commissioner_scan_qrcode_fragment_label">Scan QR Code</string>
    <string name="commissioner_select_network_fragment_label">Select Network</string>
    <string name="commissioner_password">password</string>
    <string name="commissioner_password_connect">connect</string>
    <string name="commissioner_password_cancel">cancel</string>
    <string name="commissioner_fetch_credential_done">done</string>
    <string name="commissioner_fetch_credential_cancel">cancel</string>
    <string name="commissioner_commissioning_fragment_label">Commissioning</string>
    <string name="commissioner_location_permission_missing_alert_title">Location permission missing</string>
    <string name="commissioner_location_permission_missing_alert_message">Location permission is required to scan BLE devices.</string>
    <string name="commissioner_location_permission_missing_alert_try_again">Try again</string>
</resources>
