<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/scanQrBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/scan_qr_code_btn_text" />

    <Button
        android:id="@+id/commissioningBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/commissioner_commissioning" />

    <Button
        android:id="@+id/echoClientBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/echo_client_btn_text" />

    <Button
        android:id="@+id/onOffClusterBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/on_off_btn_text" />

    <EditText
        android:id="@+id/remoteBleAddressEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:inputType="text"
        android:textSize="20sp"
        android:text="F2:65:A0:09:FB:3E"/>

    <Button
        android:id="@+id/startIp6oBleServiceBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Start IPoBLE Service" />

    <Button
        android:id="@+id/stopIp6oBleServiceBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Stop IPoBLE Service" />

    <Button
        android:id="@+id/sendUdpBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Send Udp" />
</LinearLayout>
