<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ipAddressEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/enter_ip_address_hint_text" />

    <TextView
        android:id="@+id/onBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ipAddressEd"
        android:background="@android:color/darker_gray"
        android:text="@string/send_command_on_btn_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/toggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_gravity="center"
        android:layout_below="@id/ipAddressEd"
        android:layout_toEndOf="@id/onBtn"
        android:layout_toStartOf="@+id/offBtn"
        android:background="@android:color/darker_gray"
        android:text="@string/send_command_toggle_btn_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@id/offBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/ipAddressEd"
        android:background="@android:color/darker_gray"
        android:text="@string/send_command_off_btn_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/commandStatusTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/onBtn"
        android:singleLine="false"
        android:minLines="1"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/startIp6oBleServiceBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/commandStatusTv"
        android:text="Start IP6oBLE Service" />

    <Button
        android:id="@+id/stopIp6oBleServiceBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/startIp6oBleServiceBtn"
        android:text="Stop IP6oBLE Service" />

    <Button
        android:id="@+id/sendUdpBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/stopIp6oBleServiceBtn"
        android:text="Send Udp" />

    <ProgressBar
        android:id="@+id/ble_device_scan_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@id/sendUdpBtn" />

    <ListView
        android:id="@+id/ble_devices"
        style="@style/Widget.AppCompat.Light.ListView.DropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:choiceMode="singleChoice"
        android:listSelector="#bbbbbb"
        android:layout_below="@id/ble_device_scan_bar"></ListView>

    <View
        android:id="@+id/ble_devices_bottom_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/ble_devices" />

</RelativeLayout>